[gd_scene load_steps=25 format=2]

[ext_resource path="res://src/Player.gd" type="Script" id=1]
[ext_resource path="res://src/utils/Trail2D.gd" type="Script" id=2]
[ext_resource path="res://assets/images/player/head.png" type="Texture" id=3]
[ext_resource path="res://assets/images/player/paws.png" type="Texture" id=4]
[ext_resource path="res://src/HurtBox.gd" type="Script" id=5]
[ext_resource path="res://src/utils/Fader.gd" type="Script" id=6]
[ext_resource path="res://assets/images/player/face.png" type="Texture" id=7]
[ext_resource path="res://src/utils/RandomAudioStreamPlayer.gd" type="Script" id=8]
[ext_resource path="res://assets/audio/cat_step_01.wav" type="AudioStream" id=9]

[sub_resource type="AnimationNodeBlend2" id=1]

[sub_resource type="AnimationNodeAnimation" id=2]
animation = "default"

[sub_resource type="AnimationNodeAnimation" id=3]
animation = "walk"

[sub_resource type="AnimationNodeBlendTree" id=4]
graph_offset = Vector2( -325.406, 107.932 )
nodes/blend_walk/node = SubResource( 1 )
nodes/blend_walk/position = Vector2( 90, 150 )
nodes/default/node = SubResource( 2 )
nodes/default/position = Vector2( -120, 150 )
nodes/walk/node = SubResource( 3 )
nodes/walk/position = Vector2( -120, 280 )
node_connections = [ "blend_walk", 0, "default", "blend_walk", 1, "walk", "output", 0, "blend_walk" ]

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "zoom"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]
advance_condition = "zoom"

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
advance_condition = "not_zoom"

[sub_resource type="AnimationNodeStateMachine" id=8]
states/walk/node = SubResource( 4 )
states/walk/position = Vector2( 236.487, 251.65 )
states/zoom/node = SubResource( 5 )
states/zoom/position = Vector2( 432.487, 251.9 )
transitions = [ "walk", "zoom", SubResource( 6 ), "zoom", "walk", SubResource( 7 ) ]
start_node = "walk"
graph_offset = Vector2( 12.4874, 59.3999 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.239265, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -20 ), Vector2( 0, -20 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
}, {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0, 0.3 )
}

[sub_resource type="Animation" id=12]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Head:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -12 ), Vector2( 0, 0 ) ]
}

[sub_resource type="CircleShape2D" id=13]
radius = 32.0

[sub_resource type="CircleShape2D" id=14]
radius = 32.0

[sub_resource type="CircleShape2D" id=15]
radius = 192.0

[node name="Player" type="KinematicBody2D"]
collision_mask = 0
script = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )
parameters/conditions/not_zoom = false
parameters/conditions/zoom = false
parameters/walk/blend_walk/blend_amount = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/default = SubResource( 10 )
anims/walk = SubResource( 11 )
anims/zoom = SubResource( 12 )

[node name="Tween" type="Tween" parent="."]

[node name="Fader" type="Tween" parent="."]
script = ExtResource( 6 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
volume_db = -12.0
bus = "Effects"
script = ExtResource( 8 )
pitch_scale_lower = -0.1
pitch_scale_upper = 0.1

[node name="StaticTorsoPosition" type="Position2D" parent="."]

[node name="StaticTorso" type="Line2D" parent="StaticTorsoPosition"]
width = 64.0
default_color = Color( 0, 0, 0, 0 )
script = ExtResource( 2 )
trail_length = 8
auto_alpha_gradient = false

[node name="ZoomTrailPosition" type="Position2D" parent="."]

[node name="ZoomTrail" type="Line2D" parent="ZoomTrailPosition"]
width = 48.0
default_color = Color( 1, 1, 1, 1 )
script = ExtResource( 2 )
trail_length = 40
degen_rate = 2

[node name="Butt" type="Node2D" parent="."]
position = Vector2( -160, 0 )

[node name="TailPosition" type="Position2D" parent="Butt"]
position = Vector2( 0, -24 )

[node name="Tail" type="Line2D" parent="Butt/TailPosition"]
z_index = -1
width = 16.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 2 )
trail_length = 16
auto_alpha_gradient = false

[node name="Sprite" type="Sprite" parent="Butt"]
texture = ExtResource( 4 )

[node name="Paws" type="Node2D" parent="."]
position = Vector2( -80, 0 )

[node name="Sprite" type="Sprite" parent="Paws"]
texture = ExtResource( 4 )

[node name="Head" type="Node2D" parent="."]

[node name="TorsoPosition" type="Position2D" parent="Head"]

[node name="Torso" type="Line2D" parent="Head/TorsoPosition"]
z_index = -1
width = 64.0
default_color = Color( 1, 1, 1, 1 )
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
script = ExtResource( 2 )
trail_length = 8
auto_alpha_gradient = false

[node name="Sprite" type="Sprite" parent="Head"]
texture = ExtResource( 3 )

[node name="Face" type="Sprite" parent="Head"]
texture = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -3.14159
shape = SubResource( 13 )

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
rotation = -3.14159
shape = SubResource( 14 )

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
monitoring = false
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
shape = SubResource( 15 )
